# opencrm_api

./: .gitignore  README.md  pyproject.toml
docs/: installation.md
src/opencrm/: __init__.py  auth.py  client.py  exceptions.py
src/opencrm/models/: __init__.py  activity.py  base.py  company.py  contact.py  helpdesk.py  lead.py  opportunity.py  product.py  project.py
src/opencrm/resources/: __init__.py  activities.py  base.py  companies.py  contacts.py  helpdesk.py  leads.py  opportunities.py  products.py  projects.py
src/opencrm/utils/: __init__.py  query.py
tests/: test_client.py
